
  [ Tollef Fog Heen ]
  * Build apache2-src package.
  * Do not AddDefaultCharset if we are proxying.  Closes: #277526
  * Do not forcefully link against libdb4.3 and other libs.
  * Enable the same list of modules as we had in 2.0 (by default) and do
    that for all older versions than 2.2.3-3 to fix upgrade issues people
    have had.  Closes: #392349
  * Set default IndexWidth to *.

  [ Adam Conrad ]
  * Update our php4 and php5 conflicts, to reflect the reality that each
    were uploaded and built again while apache2.2 was in the new queue.
    Closes: #392189
  * Migrate kill symlinks from K91 to K09 (closes: #376503)

  [ Thom May ]
  * Fix permissions on suexec (Closes: #391918)
  * This is Debian, not Ubuntu (Closes: #393277)

 -- Adam Conrad <adconrad@0c3.net>  Sat,  7 Oct 2006 17:57:04 +1000

apache2 (2.2.3-2) unstable; urgency=low

  * Make sure to ship /var/log/apache2 in the apache2.2-common package.
    Closes: #390786
  * Install suexec.8 as suexec2.8.  Closes: #390774
  * Make sure that we never ship .svn directories in any binary packages.
    Closes: #390785
  * Not only chmod -x /usr/sbin/apache2 in apache2.2-common.preinst, chmod
    +x it in same's postinst too.  Closes: #390794
  * We now ship htcacheclean in apache2-utils.  Closes: #376680
  * Try to stop old apaches in preinst of the mpms.  Closes:  #390893
  * Make apache2-mpm-{worker,prefork} conflict with apache2-mpm-event and
    apache2-common.
  * rm -f /var/lib/dpkg/info/apache2-common.postrm.  So apache2-common can
    be purged. Yes, we're on crack.  Closes: #390823
  * Make apache2-utils's Replaces on apache2-common be unversioned.
    Closes: #391018
  * Stop shipping cern_meta.load, dumpio.load and ext_filter.load.  Thanks
    to Stephane Chazelas for noticing.  Closes: #391393

 -- Tollef Fog Heen <tfheen@debian.org>  Tue,  3 Oct 2006 10:03:48 +0200

apache2 (2.2.3-1) unstable; urgency=low

  * Remove mention of AddDefaultCharset from apache2.conf as this is now